Added requet service

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Adminca bootstrap 4 & angular 5 admin template, Шаблон админки</title>
+  <title>ItJobMada - Espace admin</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
