Update candidate page

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr-FR">
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=500">
   <title>ItJobMada - Espace admin</title>
   <base href="/">
 
